fix(ui): remove extra scrollbar bug

--- a/src/components/css/select.module.css
+++ b/src/components/css/select.module.css
@@ -61,7 +61,6 @@
     margin: 0rem;
     background-color: var(--control-hover-color);
     max-height: 80rem;
-    overflow: scroll;
     cursor: pointer;
     user-select: none;
     border-bottom-left-radius: var(--border-radius);
