--- a/src/pages/options/css/settings.module.css
+++ b/src/pages/options/css/settings.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     gap: 1rem;
     min-width: 65rem;
-    overflow: scroll;
 }
 
 .buttonContainer {
